# mechaflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python.yml  rust.yml
crates/mechaflow-core/: Cargo.toml
crates/mechaflow-core/src/: config.rs  error.rs  event.rs  lib.rs  logging.rs  prelude.rs  runtime.rs  types.rs  utils.rs
crates/mechaflow-devices/: Cargo.toml
crates/mechaflow-devices/examples/: thermostat_example.rs
crates/mechaflow-devices/src/: device.rs  discovery.rs  lib.rs  mod.rs  protocol.rs  registry.rs
crates/mechaflow-devices/src/devices/: mod.rs  thermostat.rs
crates/mechaflow-devices/src/protocols/: mod.rs  mqtt.rs
crates/mechaflow-engine/: Cargo.toml
crates/mechaflow-engine/examples/: integrated_automation.rs  rules_engine.rs  simple_workflow.rs  state_machine.rs
crates/mechaflow-engine/src/: action.rs  condition.rs  context.rs  error.rs  lib.rs  rules.rs  scheduler.rs  state_machine.rs  trigger.rs  types.rs  workflow.rs
pymechaflow/: Cargo.toml  README.md  setup.py
pymechaflow/examples/: simple_example.py
pymechaflow/pymechaflow/: __init__.py
pymechaflow/src/: device.rs  engine.rs  error.rs  lib.rs  utils.rs
