[package]
name = "mechaflow-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime and engine for MechaFlow"
keywords = ["automation", "industrial", "iot", "runtime", "workflow"]
categories = ["embedded", "hardware-support", "science"]

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
yaml-rust = { workspace = true }

# Logging and diagnostics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Configuration
config = { workspace = true }

# Utilities
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
test-log = { version = "0.2", features = ["trace"] }
